[build-system]
requires = [
  "setuptools>=68",
  "wheel",
  "Cython>=0.29.36",
  "numpy>=1.21"
]
build-backend = "setuptools.build_meta"



[project]
name = "shap-bpt"
version = "0.0.1"
description = "A python library to compute Shapley image explanations with data-aware Binary Partition Trees"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "Elvio G. Amparore" }
]

# Optional but strongly recommended
maintainers = [
  { name = "Muhammad Rashid", email = "rashid@example.com" }
]

keywords = [
  "explainable-ai",
  "xai",
  "shapley-values",
  "computer-vision",
  "interpretability",
  "binary-partition-tree"
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Operating System :: OS Independent"
]


dependencies = [
  "torch",
  "torchvision",
  "numpy",
  "pillow",
  "matplotlib",
  "timm",
  "tqdm",
  "scikit-image",
  "scikit-learn"
]

[project.urls]
Homepage = "https://github.com/amparore/shap_bpt"
Shapbpt-Tests = "https://github.com/rashidrao-pk/shap_bpt_tests"
Documentation = "https://github.com/amparore/shap_bpt#readme"
Issues = "https://github.com/amparore/shap_bpt/issues"
Paper = "https://arxiv.org/abs/XXXX.XXXXX"
AAAI = "https://aaai.org/aaai26/"